Fixed the horizontal scrollbar

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -5,10 +5,10 @@ body {
   background-color: rgb(24, 24, 24);
   margin: 0;
   padding: 0;
-  font-family: "Press Start 2P", cursive;
+  font-family: 'Press Start 2P', cursive;
 }
 
-@import "partials/_navbar.scss";
+@import 'partials/_navbar.scss';
 
 // carousel
 .carousel {
@@ -86,7 +86,7 @@ h2 {
   margin-right: auto;
   font-size: 1.7em;
   color: whitesmoke;
-  font-family: "Koulen", cursive;
+  font-family: 'Koulen', cursive;
 }
 
 button {
@@ -123,6 +123,7 @@ button {
   background-color: $darkred;
   color: white;
   width: 100%;
+  box-sizing: border-box;
   img {
     width: calc(7vw + 7vh);
     height: calc(7vw + 7vh);
@@ -146,7 +147,7 @@ button {
 }
 #learn {
   height: 3.3em;
-  font-family: "Press Start 2P", cursive;
+  font-family: 'Press Start 2P', cursive;
   border: 2px solid $darkred;
   border-radius: 4px;
   &:hover {
